// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooCardFeedComponent Rendering Should render 1`] = `
<yoo-card-feed
  class="hydrated"
  data-yoo-card-feed-host=""
>
  
  <div
    class="outer-container"
    data-yoo-card-feed=""
  >
    <div
      attr-layout="row"
      class="feed-top"
      data-yoo-card-feed=""
    >
      <yoo-avatar
        class="small"
        data-yoo-card-feed=""
      />
      <div
        attr-layout="column"
        class="feed-heading"
        data-yoo-card-feed=""
      >
        
        <div
          data-yoo-card-feed=""
        >
          
        </div>
      </div>
      
    </div>
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card-feed=""
    >
      
    </div>
    <div
      attr-layout="column"
      class="feed-under-img"
      data-yoo-card-feed=""
    >
      <div
        data-yoo-card-feed=""
      >
        
      </div>
      
    </div>
  </div>
</yoo-card-feed>
`;

exports[`YooCardFeedComponent Rendering Should render with an entry 1`] = `
<yoo-card-feed
  class="hydrated"
  data-yoo-card-feed-host=""
>
  
  <div
    class="outer-container"
    data-yoo-card-feed=""
  >
    <div
      attr-layout="row"
      class="feed-top"
      data-yoo-card-feed=""
    >
      <yoo-avatar
        class="small"
        data-yoo-card-feed=""
        imgsrc="https://resources.stuff.co.nz/content/dam/images/1/i/o/a/a/c/image.related.StuffLandscapeSixteenByNine.620x349.1ioalf.png/1492902717643.jpg"
      />
      <div
        attr-layout="column"
        class="feed-heading"
        data-yoo-card-feed=""
      >
        <span
          data-yoo-card-feed=""
        >
          Jerome barber
        </span>
        <div
          data-yoo-card-feed=""
        >
          <span
            class="feed-subheading"
            data-yoo-card-feed=""
          >
            32 min ago.
          </span>
          <span
            class="feed-subheading"
            data-yoo-card-feed=""
          >
             Shared in
            <span
              data-yoo-card-feed=""
            >
               
            </span>
            <span
              class="feed-group"
              data-yoo-card-feed=""
            >
              London HQ
            </span>
          </span>
        </div>
      </div>
      <div
        class="feed-menu"
        data-yoo-card-feed=""
      >
        <i
          class="yo-more-v"
          data-yoo-card-feed=""
        />
      </div>
    </div>
    <div
      attr-layout="columns"
      class="image-container"
      data-yoo-card-feed=""
    >
      <div
        class="badge-top-left"
        data-yoo-card-feed=""
      >
        <yoo-badge
          class="hydratedtransparent round"
          data-yoo-card-feed=""
          text="PDF"
        />
      </div>
      
      <div
        data-yoo-card-feed=""
      >
        <span
          class="bottom-left-icon inner-icon"
          data-yoo-card-feed=""
        >
          <i
            class="yo-trophy"
            data-yoo-card-feed=""
          />
        </span>
      </div>
      
      <div
        class="image"
        data-yoo-card-feed=""
        style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://cloudinary.com/console/media_library/asset/image/upload/srgyz3etgxqv9vjsz6lv);"
      />
    </div>
    <div
      attr-layout="column"
      class="feed-under-img"
      data-yoo-card-feed=""
    >
      <div
        data-yoo-card-feed=""
      >
        <span
          class="feed-icon"
          data-yoo-card-feed=""
        >
          <i
            class="yo-heart"
            data-yoo-card-feed=""
          />
           45
        </span>
        <span
          class="feed-icon"
          data-yoo-card-feed=""
        >
          <i
            class="yo-comment"
            data-yoo-card-feed=""
          />
           5645
        </span>
        <span
          class="feed-icon"
          data-yoo-card-feed=""
        >
          <i
            class="yo-eye"
            data-yoo-card-feed=""
          />
           45
        </span>
      </div>
      <div
        class="feed-description"
        data-yoo-card-feed=""
      >
        <div
          class="description-content"
          data-yoo-card-feed=""
        >
          New photo shooting. This is extremely cool ! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        </div>
        
      </div>
      <div
        class="feed-hashtags"
        data-yoo-card-feed=""
      >
        <span
          class="hashtag"
          data-yoo-card-feed=""
        >
          #london 
        </span>
        <span
          class="hashtag"
          data-yoo-card-feed=""
        >
          #shouting 
        </span>
        <span
          class="hashtag"
          data-yoo-card-feed=""
        >
          #photo 
        </span>
        <span
          class="hashtag"
          data-yoo-card-feed=""
        >
          #business 
        </span>
      </div>
      <div
        class="feed-bottom-action"
        data-yoo-card-feed=""
      >
        <span
          data-yoo-card-feed=""
          id="action"
        >
          Add a comment...
        </span>
      </div>
    </div>
  </div>
</yoo-card-feed>
`;
